chore: reusing dto